--- a/style.css
+++ b/style.css
@@ -97,3 +97,21 @@ ul li::before{
 .checked::before{
   background-image: url(images/checked.png);
 }
+
+span {
+  position: absolute;
+  right: 0;
+  top: 5px;
+  height: 40px;
+  width: 40px;
+  font-size: 30px;
+  color: #555;
+  line-height: 40px;
+  font-weight: 700;
+  text-align: center;
+}
+
+span:hover {
+  color: red;
+  cursor: pointer;
+}
