--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@
 }
 
 .todo-app {
-  width: 540px;
-  /* max-width: 540px; */
+  width: 100%;
+  max-width: 540px;
   background: #fff;
   margin: 100px auto 20px;
   padding: 40px 30px 70px;
@@ -114,4 +114,16 @@ span {
 span:hover {
   color: red;
   cursor: pointer;
+}
+
+
+@media (max-width:400px) {
+  button {
+    padding: 0;
+    width: 100px;
+    height: 30px;
+  }
+  ul li{
+    text-wrap: wrap;
+  }
 }
